Add Video States / fix name video / hash password when user update
