# src/models/videoStatesModel.js
@@ -1,11 +1,11 @@
 const mongoose = require("mongoose");
 const Schema = mongoose.Schema;
 
-const videoStatusSchema = new Schema({
+const videoStatesSchema = new Schema({
   name: {
     type: String,
     required: true,
   },
 });
 
-module.exports = mongoose.model("VideoStatus", videoStatusSchema);
+module.exports = mongoose.model("VideoStates", videoStatesSchema);
